fix horizontal scroll bug

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 body {
     font-family: "Open Sans", sans-serif;
     font-family: "Oxygen", sans-serif;
+    overflow-x: hidden;
 }
 
 .main-screen {
